--- a/src/index.html
+++ b/src/index.html
@@ -1,13 +1,17 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="utf-8">
-  <title>Plpm</title>
-  <base href="/">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
-</head>
-<body>
-  <plpm-root></plpm-root>
-</body>
+  <head>
+    <meta charset="utf-8" />
+    <title>Plpm</title>
+    <base href="/" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <link rel="icon" type="image/x-icon" href="favicon.ico" />
+    <script
+      src="https://kit.fontawesome.com/2345683446.js"
+      crossorigin="anonymous"
+    ></script>
+  </head>
+  <body>
+    <plpm-root></plpm-root>
+  </body>
 </html>
