--- a/src/index.html
+++ b/src/index.html
@@ -12,10 +12,10 @@
       href="https://fonts.googleapis.com/css2?family=Roboto+Condensed:ital,wght@0,300;0,400;0,700;1,300;1,400;1,700&display=swap"
       rel="stylesheet"
     />
-    <script
+    <!-- <script
       src="https://kit.fontawesome.com/2345683446.js"
       crossorigin="anonymous"
-    ></script>
+    ></script> -->
   </head>
   <body>
     <plpm-root></plpm-root>
